--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
     "php": ">=7.0",
     "gettext/gettext": "^4.8.4",
     "gettext/languages": "<=2.6.0",
-    "illuminate/config": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-    "illuminate/console": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-    "illuminate/filesystem": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-    "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-    "illuminate/translation": "^5.5 || ^6.0 || ^7.0 || ^8.0",
+    "illuminate/config": "^5.5 || ^6.0 || ^7.0 || ^8.0  || ^9.0",
+    "illuminate/console": "^5.5 || ^6.0 || ^7.0 || ^8.0  || ^9.0",
+    "illuminate/filesystem": "^5.5 || ^6.0 || ^7.0 || ^8.0  || ^9.0",
+    "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0  || ^9.0",
+    "illuminate/translation": "^5.5 || ^6.0 || ^7.0 || ^8.0  || ^9.0",
     "guzzlehttp/guzzle": ">=6.3"
   },
   "require-dev": {
